# kicad-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  PLAN.md  PUBLISHING.md  README.md  conftest.py  main.py  pyproject.toml  server.json
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  example.md
docs/rules/: CHANGES.md  hartley-rules.md  philslab-rules.md
kicad_mcp/: __init__.py  __main__.py  config.py  context.py  history.py  projects.py  server.py  tasks.py
kicad_mcp/backends/: __init__.py  base.py  cli.py  factory.py  freerouting.py  ipc.py  library.py  sexpr.py
kicad_mcp/prompts/: __init__.py  review.py  workflows.py
kicad_mcp/review_engine/: __init__.py  geometry.py  impedance.py  model.py  registry.py  report.py
kicad_mcp/review_engine/rules/: __init__.py  base.py  connectors.py  crosstalk.py  decoupling.py  dfm.py  grounding.py  impedance.py  return_path.py  smps.py  stackup.py  subcircuits.py  transmission.py
kicad_mcp/tools/: __init__.py  _common.py  advanced.py  board.py  board_edit.py  diagnostics.py  export.py  impedance.py  library.py  project.py  review.py  router.py  routing.py  schematic_edit.py  schematic_read.py  tasks.py  validate.py
kicad_mcp/utils/: __init__.py  netlist.py  paths.py  sexpr.py  subprocess.py
tests/: test_config.py  test_history.py  test_projects.py  test_tasks.py
tests/fixtures/: README.md  generate_sample_project.py
tests/test_backends/: test_cli.py  test_factory.py  test_freerouting.py  test_ipc.py  test_library.py  test_reports.py  test_sexpr.py  test_sexpr_backend.py
tests/test_review/: test_antimyth.py  test_crosstalk.py  test_geometry_offset.py  test_golden.py  test_impedance_extraction.py  test_impedance_physics.py  test_impedance_rule.py  test_model.py  test_report.py  test_rules_unit.py  test_subcircuits.py  test_transmission_aggregation.py  test_transmission_pairs.py
tests/test_tools/: test_board_edit.py  test_diagnostics.py  test_impedance_tool.py  test_project_create.py  test_read_layer.py  test_review_tools.py  test_router.py  test_routing.py  test_schematic_edit.py  test_verify_export.py
tests/test_utils/: test_netlist.py  test_paths.py  test_sexpr.py  test_subprocess.py
(+20 files in other folders)
